refactor settings screen added theme changed

--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -11,7 +11,7 @@
     android:id="@+id/appBar"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:background="@color/teal_700"
+    android:background="@color/color_action_bar"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
@@ -29,6 +29,7 @@
     style="@style/base_style_items"
     android:layout_width="match_parent"
     android:layout_height="48dp"
+    android:layout_margin="@dimen/base_margin_x1"
     android:text="@string/theme_white"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +40,7 @@
     style="@style/base_style_items"
     android:layout_width="match_parent"
     android:layout_height="48dp"
+    android:layout_margin="@dimen/base_margin_x1"
     android:text="@string/language"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
