--- a/app/src/main/res/values-w1240dp/dimens.xml
+++ b/app/src/main/res/values-w1240dp/dimens.xml
@@ -1,3 +1,4 @@
 <resources>
-  <dimen name="fab_margin">200dp</dimen>
+  <dimen name="base_margin_x1">4dp</dimen>
+  <dimen name="base_margin_x4">16dp</dimen>
 </resources>
