--- a/app/src/main/res/layout/fragment_edits.xml
+++ b/app/src/main/res/layout/fragment_edits.xml
@@ -11,7 +11,7 @@
     android:id="@+id/appBar"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:background="@color/teal_700"
+    android:background="@color/color_action_bar"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
@@ -26,26 +26,28 @@
   </com.google.android.material.appbar.AppBarLayout>
 
   <EditText
+    android:id="@+id/edittext_title"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:id="@+id/edittext_title"
+    android:layout_margin="@dimen/base_margin_x1"
+    android:gravity="top"
     android:hint="@string/title"
     android:textColor="@color/purple_500"
-    android:gravity="top"
-    app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/appBar" />
 
   <EditText
+    android:id="@+id/edittext_body"
     android:layout_width="match_parent"
     android:layout_height="0dp"
-    android:id="@+id/edittext_body"
+    android:layout_margin="@dimen/base_margin_x1"
+    android:gravity="top"
     android:hint="@string/body"
     android:textColor="@color/purple_500"
-    android:gravity="top"
-    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/edittext_title"
-    app:layout_constraintBottom_toBottomOf="parent" />
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/edittext_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
