--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -11,7 +11,7 @@
     android:id="@+id/appBar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/teal_700">
+    android:background="@color/color_action_bar">
 
     <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
@@ -29,7 +29,7 @@
     android:layout_height="match_parent"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:padding="4dp"
+    android:padding="@dimen/base_margin_x4"
     tools:itemCount="3"
     tools:listitem="@layout/list_viewholder_item" />
 
