--- a/app/src/main/res/layout/list_viewholder_item.xml
+++ b/app/src/main/res/layout/list_viewholder_item.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:layout_margin="1dp"
-  android:background="@color/teal_200"
+  android:layout_margin="@dimen/base_margin_x1"
+  android:background="@color/color_view_holder_background"
   android:padding="8dp">
 
   <TextView
     android:id="@+id/textview_content_title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
     android:text="@string/action_settings"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+    android:textStyle="italic"
+    android:typeface="serif"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintEnd_toStartOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
   <TextView
     android:id="@+id/textview_content_body"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
     android:text="@string/action_settings"
+    android:layout_marginTop="4dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintEnd_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textview_content_title" />
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/textview_content_title"
+    tools:text="body\nfirst\nnext\nline 3\n4 end" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
