--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,3 +1,4 @@
 <resources>
-  <dimen name="fab_margin">48dp</dimen>
+  <dimen name="base_margin_x1">1dp</dimen>
+  <dimen name="base_margin_x4">4dp</dimen>
 </resources>
