--- a/app/src/main/res/layout/list_viewholder_item.xml
+++ b/app/src/main/res/layout/list_viewholder_item.xml
@@ -2,30 +2,29 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  style="@style/List_ViewHolder_Item_Container"
   android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:layout_margin="@dimen/base_margin_x1"
-  android:background="@color/color_view_holder_background"
-  android:padding="8dp">
+  android:layout_height="wrap_content">
 
   <TextView
     android:id="@+id/textview_content_title"
+    style="@style/List_ViewHolder_Item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/action_settings"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     android:textStyle="italic"
-    android:typeface="serif"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
   <TextView
     android:id="@+id/textview_content_body"
+    style="@style/List_ViewHolder_Item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="@string/action_settings"
     android:layout_marginTop="4dp"
+    android:text="@string/action_settings"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
