--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,25 @@
     <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     <!-- Customize your theme here. -->
   </style>
+
+  <style name="AppBarLayout">
+    <item name="android:background">@color/color_action_bar</item>
+  </style>
+
+  <style name="List_ViewHolder_Item">
+    <item name="android:textColor">@color/white</item>
+    <item name="android:typeface">serif</item>
+  </style>
+
+  <style name="List_ViewHolder_Item_Container">
+    <item name="android:layout_margin">@dimen/base_margin_x1</item>
+    <item name="android:background">@color/color_view_holder_background</item>
+    <item name="android:padding">8dp</item>
+  </style>
+
+  <style name="Custom_EditText">
+    <item name="android:gravity">top</item>
+    <item name="android:layout_margin">@dimen/base_margin_x1</item>
+    <item name="android:textColor">@color/purple_700</item>
+  </style>
 </resources>
